--- a/style.css
+++ b/style.css
@@ -508,6 +508,12 @@ canvas {
   transition: transform 1s ease-in-out, opacity 1s ease-in-out;
 }
 
+@media screen and (max-width: 576px) {
+  .hint-sidebar {
+    max-width: 100vw;
+  }
+}
+
 .sidebar-in {
   transition: transform 1s ease-in-out;
   animation: slideIn 1s forwards;
@@ -832,7 +838,7 @@ canvas {
   display: none;
 }
 
-.MCinfo-in{
+.MCinfo-in {
   display: block;
   animation: infoFadeIn 0.5s ease-in forwards;
 }
@@ -848,7 +854,7 @@ canvas {
   }
 }
 
-.MCinfo-out{
+.MCinfo-out {
   display: block;
   animation: infoFadeOut 0.5s ease-out forwards;
 }
@@ -864,7 +870,7 @@ canvas {
   }
 }
 
-.mapbox{
+.mapbox {
   border-style: solid;
   border-width: 24px;
   border-image-source: url("./Assets/map.png");
@@ -876,31 +882,18 @@ canvas {
 }
 
 @media screen and (max-width: 576px) {
-  .mapbox{
+  .mapbox {
     background: #c2ac88;
     border-radius: 0;
   }
 }
 
-/* .modal-backdrop {
-  backdrop-filter: blur(8px) saturate(120%);
-  -webkit-backdrop-filter: blur(8px) saturate(120%);
+.modal-backdrop {
+  backdrop-filter: blur(10px) saturate(120%);
+  -webkit-backdrop-filter: blur(10px) saturate(120%);
   background-color: rgba(255, 255, 255, 0.06);
   border: 1px solid rgba(255, 255, 255, 0.12);
-  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   will-change: backdrop-filter, background-color, transform;
-  animation: fadeInBackdrop 0.5s ease-in-out forwards;
 }
-
-@keyframes fadeInBackdrop {
-  from {
-    backdrop-filter: blur(0px) saturate(100%);
-    background-color: rgba(255, 255, 255, 0);
-  }
-  to {
-    backdrop-filter: blur(8px) saturate(120%);
-    background-color: rgba(255, 255, 255, 0.06);
-  }
-} */
-
